--- a/Emna&Jonno/index.html
+++ b/Emna&Jonno/index.html
@@ -13,8 +13,8 @@
     <div class="screen">
       <h1 class="h1">EMNA & JONNO</h1>
       <div class="grid">
-        <a href="jonno-ray.html"><button class="button">JONNO RAY</button></a>
-        <a href="telaemna.html"><button class="button">EMNA ROSE</button></a>
+        <a href="jonno.html"><button class="button">JONNO RAY</button></a>
+        <a href="emna.html"><button class="button">EMNA ROSE</button></a>
       </div>
     </div>
   </main>
