--- a/Emna&Jonno/jonno.html
+++ b/Emna&Jonno/jonno.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/jonno.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Jonno Ray</title>
 </head>
 <body>
     <header class="navbar">
         <nav>
           <ul class="menu">
+
+            <i id="main-menu" class="fa fa-bars" aria-hidden="true"></i>
 
             <li class="dropdown">
                 <a href="#aneis" class="dropbtn">ANEIS</a>
