--- a/Emna&Jonno/login.html
+++ b/Emna&Jonno/login.html
@@ -10,8 +10,9 @@
 
     <header>
         <div class="header">
-            <h2 class="h2-header">Emna&Jonno</h2></header>
+            <h2 class="h2-header">Emna&Jonno</h2>
         </div>
+    </header>
 
     <br>
     <main>
