--- a/Emna&Jonno/carrinho.html
+++ b/Emna&Jonno/carrinho.html
@@ -3,40 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jonno Ray – Carrinho Avançado</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/carrinho.css" />
+  <title>Emna & Jonno Carrinho</title>
+  <link rel="stylesheet" href="css/carrinho.css"/>
+
 </head>
 <body>
 
-  
-  <main>
-  
-      <h2>Carrinho</h2>
-      <div class="cart-items" id="cart-items"></div>
-      <div class="cart-total" id="cart-total">Total: R$ 0,00</div>
-
-      <button type="submit">Pagar Agora</button>
-    </aside>
-    <div>
-
-  </main>
-
-
-  
-  
-
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: Arial, sans-serif; }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem;
-      background-color: #1f2937;
-      color: white;
-    }
+    body { font-family: 'Playfair-Regular'; }
+    
     nav {
       display: none;
       flex-direction: column;
@@ -67,12 +43,28 @@
       outline: 2px solid rgb(56, 56, 52);
     }
   </style>
-</head>
-<body>
 
 
 
 
+  <header>
+    <div class="header">
+      <h2 class="h2-header">Emna&Jonno</h2>
+    </div>
+  </header>
+
+  
+  <main>
+  
+      <h2>Carrinho</h2>
+      <div class="cart-items" id="cart-items"></div>
+      <div class="cart-total" id="cart-total">Total: R$ 0,00</div>
+
+      <button type="submit" class="pagamento-btn">Pagar Agora</button>
+    </aside>
+    <div>
+
+  
 
 
   <section style="max-width: 400px; margin: 2rem auto; padding: 1rem; border: 4px solid #2c2929; border-radius: 8px;">
@@ -110,6 +102,8 @@
   <h3>Histórico de Compras</h3>
   <ul id="history" style="list-style: none; padding: 0;"></ul>
 </section>
+
+</main>
 
 <script>
   const form = document.getElementById('fake-payment');
