--- a/Emna&Jonno/carrinho.html
+++ b/Emna&Jonno/carrinho.html
@@ -49,21 +49,19 @@
 
   <header>
     <div class="header">
-      <h2 class="h2-header">Emna&Jonno</h2>
+      <a href="index.html">
+        <h2 class="h2-header">Emna&Jonno</h2>
+      </a>
     </div>
   </header>
 
   
   <main>
-  
+
+    <div class="alinharItens">
       <h2>Carrinho</h2>
-      <div class="cart-items" id="cart-items"></div>
       <div class="cart-total" id="cart-total">Total: R$ 0,00</div>
-
-      <button type="submit" class="pagamento-btn">Pagar Agora</button>
-    </aside>
-    <div>
-
+    </div>
   
 
 
