--- a/Emna&Jonno/login.html
+++ b/Emna&Jonno/login.html
@@ -10,7 +10,9 @@
 
     <header>
         <div class="header">
-            <h2 class="h2-header">Emna&Jonno</h2>
+            <a href="index.html">
+                <h2 class="h2-header">Emna&Jonno</h2>
+            </a>
         </div>
     </header>
 
